feat: add CRUD operations for Tasks

--- a/Bugify.API/appsettings.json
+++ b/Bugify.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BugifyConnection": "Server=(localdb)\\mssqllocaldb;Database=BugifyDB;Trusted_Connection=True;TrustServerCertificate=true"
+  }
 }
